- Fixed bug #27171 (crash inside gmp_hamdist()). (Jani)
- Fixed bug #27149 (broken CLOB support in oci8 extension). (Antony)
- Fixed bug #27135 (Possible crash inside mb_strlen()). (Moriyoshi)
- Fixed bug #27026 (Added "cgi.nph" php.ini option to allow forcing of
  the 'Status: 200' header that is not normally needed). (Ilia)
- Fixed bug #26758 (FastCGI exits immediately with status 255). (Ilia, 
  tcarter at noggin dot com dot au)
- Fixed bug #26653 (open_basedir incorrectly resolved on win32). (Ilia,
  scottmacvicar at ntlworld dot com)
- Fixed bug #24773 (unsetting string as array causes a crash). (Sara)

03 Feb 2004, Version 4.3.5RC2
- Changed "allow_url_fopen" php.ini option to be PHP_INI_SYSTEM. (Sara)
- Improved the sybase_ct module: (Timm)
  . Added ability to define a message handler not only globally, but also per 
    connection.
  . Added "sybct.packet_size" php.ini option.
  . Changed "sybct.login_timeout" php.ini option changeable at runtime.
  . Fixed memory leak in sybase_set_message_handler().
- Fixed bug #27058 (crash in sybase_connect() with 2 arguments). (Ilia)
- Fixed bug #27056 (ints used instead of longs inside some GD functions).
  (Ilia)
- Fixed bug #27040 (passing an array of form-fields to CURLOPT_POSTFIELDS
  does not work). (Ilia, Jani)
- Fixed bug #27037 (fixed possible crash in apache2handler output code). (Ilia)
- Fixed bug #27011 (64bit int/long confusion in preg_match*() functions).
  (Ilia)
- Fixed bug #27007 (missing connection closure when connect fails in pgsql).
  (Ilia)
- Fixed bug #26974 (rename() doesn't check the destination file against 
  safe_mode/open_basedir). (Ilia)
- Fixed bug #26973 (*printf() '+' modifier broken). (Jani)
- Fixed bug #26969 (--with-openssl=shared build fails). (Jani)
- Fixed bug #26968 (Segfault with Interbase module built as shared). (Ard)
- Fixed bug #26949 (rand(min,max) always returns min when ZTS enabled). (Jani)
- Fixed bug #26937 (Warning in xml.c). (Jani)